bin_PROGRAMS = atomkraft
atomkraft_SOURCES = atomicdata.cpp bitbase.cpp bitboard.cpp book.cpp create_book.cpp debug.cpp endgame.cpp evaluate.cpp main.cpp main_uci.cpp material.cpp misc.cpp move.cpp movegen.cpp movepick.cpp pawns.cpp pgn.cpp position.cpp search.cpp simple_search.cpp thread.cpp timeman.cpp tt.cpp tuning.cpp types.cpp uci.cpp ucioption.cpp
atomkraft_DEPENDENCIES = Makefile
atomkraft_LDADD = -lstdc++ -lpthread
