ACLOCAL_AMFLAGS = --install -I m4
EXTRA_DIST = atomicdata.h bitboard.h bitcount.h book.h create_book.h debug.h endgame.h evaluate.h fics.h history.h lock.h main.h material.h misc.h movegen.h move.h movepick.h pawns.h pgn.h position.h psqtab.h rkiss.h search.h simple_search.h thread.h timeman.h tt.h tuning.h types.h ucioption.h scripts/wrap-compiler-for-flag-check
bin_PROGRAMS = atomkraft
atomkraft_SOURCES = atomicdata.cpp bitbase.cpp bitboard.cpp book.cpp create_book.cpp debug.cpp endgame.cpp evaluate.cpp main.cpp main_uci.cpp material.cpp misc.cpp move.cpp movegen.cpp movepick.cpp pawns.cpp pgn.cpp position.cpp search.cpp simple_search.cpp thread.cpp timeman.cpp tt.cpp tuning.cpp types.cpp uci.cpp ucioption.cpp
